kubernetes/apps/observability/redis/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master-metallb
  annotations:
    metallb.universe.tf/allow-shared-ip: local
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 10.0.0.20
